# V-Player

./: .gitignore  settings.gradle
app/: app.jks  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MyPlayer.cpp  MyPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/com/example/vplayer/: Flags.java  MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
